fixes extra margins in inline interps to accomodate for permalink navigation

--- a/front_end/css/less/module/interpretations.less
+++ b/front_end/css/less/module/interpretations.less
@@ -19,11 +19,9 @@
         padding-top: 0;
     }
 
-    li { /* reset borders and padding from main regulation */
-        margin: 0;
-        padding: 0px;
+    li { /* reset borders */
         border-bottom: none;
-    }
+}
 
     p {
         font-size: 0.875em;
